style-fix: border-radius of image in hostings cards + filter spacing

--- a/css/main.css
+++ b/css/main.css
@@ -132,14 +132,16 @@ ul {
 
 .card__img {
   height: calc(1.1 * var(--grid-5));
-  border-radius: var(--grid-3) var(--grid-3) 0 0;
+  border-radius: calc(var(--grid-3) - var(--grid-1))
+    calc(var(--grid-3) - var(--grid-1)) 0 0;
   overflow: hidden;
 }
 .card--left-sided-img .card__img {
   flex: 2;
 
   height: calc(1.3 * var(--grid-5));
-  border-radius: var(--grid-3) 0 0 var(--grid-3);
+  border-radius: calc(var(--grid-3) - var(--grid-1)) 0 0
+    calc(var(--grid-3) - var(--grid-1));
 }
 .card__img img {
   width: 100%;
@@ -311,7 +313,7 @@ h2.standfirst {
 
 .legend-box,
 .filter {
-  margin: var(--grid-3) var(--grid-4) var(--grid-3) 0;
+  margin: var(--grid-3) var(--grid-3) var(--grid-3) 0;
 }
 
 .filter-label {
